Enhance content with real project data from slides - 9 real project case studies with architect/construction details - About section with accurate company info from slide 4 - Technology section with detailed specs (5-axis laser, 3D scanner) - 8 new project images from presentation slides

--- a/index.html
+++ b/index.html
@@ -201,19 +201,25 @@
                         Shaping Korea's <br>
                         <span class="text-steel-400">Architectural Identity</span>
                     </h2>
-                    <p class="text-steel-300 text-lg mb-8 leading-relaxed">
-                        Since 2001, STEELLIFE has been at the forefront of architectural metal work in Korea.
-                        We specialize in 3D forming technology, creating complex curved panels that define
-                        landmark buildings across Asia and beyond.
+                    <p class="text-steel-300 text-lg mb-4 leading-relaxed">
+                        STEELLIFE CO., LTD. was established in July 2001 as an expert company specializing in
+                        SSMR roofing works and 3D exterior cladding systems. With rich experience and highly skilled
+                        workforce, we have performed numerous projects including railway stations, airports,
+                        public facilities, and large-scale commercial complexes.
                     </p>
-                    <div class="grid grid-cols-3 gap-8 mb-10">
+                    <p class="text-steel-400 text-base mb-8 leading-relaxed">
+                        Recognized as a partner of leading construction companies, we continuously invest in
+                        advanced technologies and develop our own products through mechanical testing and R&D.
+                        Notable projects include DDP, Yeosu Expo, Philippine Arena, and Incheon Airport T2.
+                    </p>
+                    <div class="grid grid-cols-3 gap-8 mb-10 stats-grid">
                         <div class="stat-item">
                             <span class="stat-number text-4xl font-bold text-white block">200+</span>
                             <span class="text-steel-400 text-sm">Projects Completed</span>
                         </div>
                         <div class="stat-item">
                             <span class="stat-number text-4xl font-bold text-white block">23</span>
-                            <span class="text-steel-400 text-sm">Years of Excellence</span>
+                            <span class="text-steel-400 text-sm">Years Since 2001</span>
                         </div>
                         <div class="stat-item">
                             <span class="stat-number text-4xl font-bold text-white block">15+</span>
@@ -221,11 +227,13 @@
                         </div>
                     </div>
                     <div class="flex flex-wrap gap-3">
-                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">SSMR Roofing</span>
-                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">3D Facades</span>
-                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">Space Frames</span>
-                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">Perforated
-                            Panels</span>
+                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">3D Forming Panel</span>
+                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">ACP & SCP 3D</span>
+                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">Metal Roof
+                            (Roofus)</span>
+                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">T.B.F Louvers</span>
+                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">Water Wave</span>
+                        <span class="px-4 py-2 bg-steel-900 text-steel-300 text-sm rounded-full">Space Frame</span>
                     </div>
                 </div>
                 <div class="about-image relative">
@@ -435,73 +443,118 @@
                     <!-- Project 1: DDP -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_ddp_1768524518619.png" alt="Dongdaemun Design Plaza by Zaha Hadid"
+                            <img src="images/project_ddp_night.png" alt="Dongdaemun Design Plaza at night"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
-                        <h3 class="text-xl font-bold mb-1">Dongdaemun Design Plaza</h3>
-                        <p class="text-steel-400 text-sm">Zaha Hadid Architects — Seoul, Korea</p>
-                        <p class="text-steel-500 text-xs mt-2">45,000+ unique 3D panels</p>
+                        <h3 class="text-xl font-bold mb-1">동대문디자인플라자 (DDP)</h3>
+                        <p class="text-steel-400 text-sm">Architect: Zaha Hadid / Samwoo</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: Samsung C&T</p>
+                        <p class="text-steel-500 text-xs mt-2">45,000+ unique 3D aluminum panels</p>
                     </div>
 
-                    <!-- Project 2: Motorstudio -->
+                    <!-- Project 2: LH Jinju HQ -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_motorstudio_1768524532400.png" alt="Hyundai Motorstudio Goyang"
+                            <img src="images/project_lh_jinju_detail.png" alt="LH Jinju Head Office"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
-                        <h3 class="text-xl font-bold mb-1">Hyundai Motorstudio Goyang</h3>
-                        <p class="text-steel-400 text-sm">Delugan Meissl — Goyang, Korea</p>
-                        <p class="text-steel-500 text-xs mt-2">Angular facade cladding</p>
+                        <h3 class="text-xl font-bold mb-1">LH Jinju Head Office</h3>
+                        <p class="text-steel-400 text-sm">Architect: D.A. Consortium</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: Hyundai E&C</p>
+                        <p class="text-steel-500 text-xs mt-2">Landmark roofing system</p>
                     </div>
 
-                    <!-- Project 3: Airport -->
+                    <!-- Project 3: YG Entertainment -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/hero_building_3_1768524421290.png" alt="Incheon Airport Terminal 2"
+                            <img src="images/project_yg_entertainment.png" alt="YG Entertainment Headquarters"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
-                        <h3 class="text-xl font-bold mb-1">Incheon Airport T2</h3>
-                        <p class="text-steel-400 text-sm">KPF / Heerim — Incheon, Korea</p>
-                        <p class="text-steel-500 text-xs mt-2">Space frame & metal roof</p>
+                        <h3 class="text-xl font-bold mb-1">YG Entertainment HQ</h3>
+                        <p class="text-steel-400 text-sm">Architect: UNStudio / Gansam</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: Samil</p>
+                        <p class="text-steel-500 text-xs mt-2">Curved 3D steel formwork</p>
                     </div>
 
-                    <!-- Project 4: Wave Building -->
+                    <!-- Project 4: Pangyo Alpha Dome -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/product_wave_panel_1768524472005.png" alt="Yeosu Expo Samsung Pavilion"
+                            <img src="images/project_pangyo_alphadome.png" alt="Pangyo Alpha Dome City"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
-                        <h3 class="text-xl font-bold mb-1">Yeosu Expo Samsung Pavilion</h3>
-                        <p class="text-steel-400 text-sm">UN Studio — Yeosu, Korea</p>
-                        <p class="text-steel-500 text-xs mt-2">Wave panel facade system</p>
+                        <h3 class="text-xl font-bold mb-1">Pangyo Alpha Dome City</h3>
+                        <p class="text-steel-400 text-sm">Architect: DMP</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: SK E&C</p>
+                        <p class="text-steel-500 text-xs mt-2">Sculptural curved panels</p>
                     </div>
 
-                    <!-- Project 5: Museum -->
+                    <!-- Project 5: Jeongok Museum -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/hero_building_2_1768524405311.png" alt="POSCO Museum"
+                            <img src="images/project_jeongok_museum.png" alt="Jeongok Prehistory Museum"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
-                        <h3 class="text-xl font-bold mb-1">POSCO Museum</h3>
-                        <p class="text-steel-400 text-sm">STEELLIFE Design — Pohang, Korea</p>
-                        <p class="text-steel-500 text-xs mt-2">Flowing metal cladding</p>
+                        <h3 class="text-xl font-bold mb-1">Jeongok Prehistory Museum</h3>
+                        <p class="text-steel-400 text-sm">Architect: X-TU / Haenglim</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: Hyundai</p>
+                        <p class="text-steel-500 text-xs mt-2">Organic steel rib structure</p>
                     </div>
 
-                    <!-- Project 6: Tower -->
+                    <!-- Project 6: Songdo Global Campus -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/hero_building_1_1768524386551.png" alt="Philippine Arena"
+                            <img src="images/project_songdo_campus.png" alt="Songdo Global Campus"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
-                        <h3 class="text-xl font-bold mb-1">Philippine Arena</h3>
-                        <p class="text-steel-400 text-sm">Populous / STEELLIFE — Manila</p>
-                        <p class="text-steel-500 text-xs mt-2">Parametric roof system</p>
+                        <h3 class="text-xl font-bold mb-1">Songdo Global Campus</h3>
+                        <p class="text-steel-400 text-sm">Architect: Perkins & Will</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: Hyundai</p>
+                        <p class="text-steel-500 text-xs mt-2">Flowing metal roof system</p>
+                    </div>
+
+                    <!-- Project 7: Paradise Hotel -->
+                    <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
+                        <div class="aspect-[4/5] overflow-hidden mb-4">
+                            <img src="images/project_paradise_hotel.png" alt="Paradise Hotel Chroma Club"
+                                class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
+                                loading="lazy">
+                        </div>
+                        <h3 class="text-xl font-bold mb-1">Paradise Hotel Chroma Club</h3>
+                        <p class="text-steel-400 text-sm">Architect: MVRDV / Gansam</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: SK E&C</p>
+                        <p class="text-steel-500 text-xs mt-2">Golden perforated panels</p>
+                    </div>
+
+                    <!-- Project 8: Hyundai-KIA Training -->
+                    <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
+                        <div class="aspect-[4/5] overflow-hidden mb-4">
+                            <img src="images/project_hyundai_kia.png" alt="Hyundai-KIA Training Center"
+                                class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
+                                loading="lazy">
+                        </div>
+                        <h3 class="text-xl font-bold mb-1">Hyundai-KIA Training Center</h3>
+                        <p class="text-steel-400 text-sm">Architect: Jo Byeong-Su</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: Hyundai E&C</p>
+                        <p class="text-steel-500 text-xs mt-2">Metal roof & wall cladding</p>
+                    </div>
+
+                    <!-- Project 9: Jeju Green Recycle -->
+                    <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
+                        <div class="aspect-[4/5] overflow-hidden mb-4">
+                            <img src="images/project_jeju_recycle.png" alt="Jeju Green Recycle Center"
+                                class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
+                                loading="lazy">
+                        </div>
+                        <h3 class="text-xl font-bold mb-1">Jeju Green Recycle Center</h3>
+                        <p class="text-steel-400 text-sm">Architect: GS Engineering</p>
+                        <p class="text-steel-500 text-xs mt-1">Construction: GS E&C</p>
+                        <p class="text-steel-500 text-xs mt-2">Unique organic dome shape</p>
                     </div>
                 </div>
             </div>
@@ -509,6 +562,8 @@
             <!-- Slide Indicators -->
             <div class="flex justify-center gap-2 mt-8">
                 <button class="slide-dot w-2 h-2 rounded-full bg-accent-blue"></button>
+                <button class="slide-dot w-2 h-2 rounded-full bg-steel-700"></button>
+                <button class="slide-dot w-2 h-2 rounded-full bg-steel-700"></button>
                 <button class="slide-dot w-2 h-2 rounded-full bg-steel-700"></button>
                 <button class="slide-dot w-2 h-2 rounded-full bg-steel-700"></button>
             </div>
@@ -542,7 +597,7 @@
                         every panel is engineered for perfection.
                     </p>
 
-                    <div class="space-y-8">
+                    <div class="space-y-8 tech-list">
                         <div class="tech-item flex gap-6">
                             <div class="w-16 h-16 bg-steel-800 flex items-center justify-center flex-shrink-0">
                                 <svg class="w-8 h-8 text-accent-blue" fill="none" stroke="currentColor"
@@ -553,9 +608,9 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3 class="text-xl font-semibold mb-2">Digital Design Pipeline</h3>
-                                <p class="text-steel-400">Rhino/Grasshopper, Tekla, and Digital Project for parametric
-                                    modeling and BIM coordination.</p>
+                                <h3 class="text-xl font-semibold mb-2">Rhinoceros & Grasshopper</h3>
+                                <p class="text-steel-400">Parametric 3D modeling with Gehry Technologies, Strand7,
+                                    ETABS & Digital Project for complex geometry development and BIM coordination.</p>
                             </div>
                         </div>
 
@@ -569,9 +624,9 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3 class="text-xl font-semibold mb-2">MPSF Stretch Forming</h3>
-                                <p class="text-steel-400">Multi-Point Stretch Forming with 300-ton press capacity for
-                                    complex 3D curvatures.</p>
+                                <h3 class="text-xl font-semibold mb-2">5-Axis Laser Cutting</h3>
+                                <p class="text-steel-400">Work radius: 1,900×3,100mm | Power: 3.3kW<br>
+                                    SUS/AL: 0.5~6mm | Steel: 0.5~16mm cutting capacity</p>
                             </div>
                         </div>
 
@@ -585,9 +640,9 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3 class="text-xl font-semibold mb-2">5-Axis Laser Cutting</h3>
-                                <p class="text-steel-400">High-precision laser cutting with 3D scanning verification for
-                                    ±2mm tolerances.</p>
+                                <h3 class="text-xl font-semibold mb-2">3D Scanner + FARO Focus</h3>
+                                <p class="text-steel-400">High-precision 3D laser scanning for quality verification
+                                    and dimensional accuracy within ±2mm tolerances.</p>
                             </div>
                         </div>
                     </div>
