--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <!-- GSAP for animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
@@ -338,7 +339,7 @@
 
                 <!-- Product 5: ACP 3D Panel -->
                 <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
-                    <img src="images/product_acp3d.png" alt="ACP & SCP 3D Composite Panel"
+                    <img src="images/product_acp3d_ai.png" alt="ACP & SCP 3D Composite Panel"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
                     <div
@@ -357,7 +358,7 @@
 
                 <!-- Product 6: 3D Steel Form Work -->
                 <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
-                    <img src="images/product_3dsteel.png" alt="3D Steel Form Work"
+                    <img src="images/product_3dsteel_ai.png" alt="3D Steel Form Work"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
                     <div
@@ -443,7 +444,7 @@
                     <!-- Project 1: DDP -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_ddp_night.png" alt="Dongdaemun Design Plaza at night"
+                            <img src="images/project_ddp_ai.png" alt="Dongdaemun Design Plaza at night"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
@@ -456,7 +457,7 @@
                     <!-- Project 2: LH Jinju HQ -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_lh_jinju_detail.png" alt="LH Jinju Head Office"
+                            <img src="images/project_lh_jinju_ai.png" alt="LH Jinju Head Office"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
@@ -469,7 +470,7 @@
                     <!-- Project 3: YG Entertainment -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_yg_entertainment.png" alt="YG Entertainment Headquarters"
+                            <img src="images/project_yg_ai.png" alt="YG Entertainment Headquarters"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
@@ -482,7 +483,7 @@
                     <!-- Project 4: Pangyo Alpha Dome -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_pangyo_alphadome.png" alt="Pangyo Alpha Dome City"
+                            <img src="images/project_alphadome_ai.png" alt="Pangyo Alpha Dome City"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
@@ -495,7 +496,7 @@
                     <!-- Project 5: Jeongok Museum -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_jeongok_museum.png" alt="Jeongok Prehistory Museum"
+                            <img src="images/project_jeongok_ai.png" alt="Jeongok Prehistory Museum"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
@@ -508,7 +509,7 @@
                     <!-- Project 6: Songdo Global Campus -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_songdo_campus.png" alt="Songdo Global Campus"
+                            <img src="images/project_songdo_ai.png" alt="Songdo Global Campus"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
@@ -521,7 +522,7 @@
                     <!-- Project 7: Paradise Hotel -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_paradise_hotel.png" alt="Paradise Hotel Chroma Club"
+                            <img src="images/project_paradise_ai.png" alt="Paradise Hotel Chroma Club"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
@@ -534,7 +535,7 @@
                     <!-- Project 8: Hyundai-KIA Training -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_hyundai_kia.png" alt="Hyundai-KIA Training Center"
+                            <img src="images/project_hyundai_ai.png" alt="Hyundai-KIA Training Center"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
@@ -547,7 +548,7 @@
                     <!-- Project 9: Jeju Green Recycle -->
                     <div class="portfolio-slide min-w-[80%] md:min-w-[45%] lg:min-w-[30%]">
                         <div class="aspect-[4/5] overflow-hidden mb-4">
-                            <img src="images/project_jeju_recycle.png" alt="Jeju Green Recycle Center"
+                            <img src="images/project_jeju_ai.png" alt="Jeju Green Recycle Center"
                                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-700"
                                 loading="lazy">
                         </div>
