Fix mobile layout for product grid: 2 columns and square aspect ratio for better space usage

--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="grid grid-cols-2 lg:grid-cols-4 gap-3 md:gap-6">
                 <!-- Product 1: Roofus Series -->
-                <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
+                <div class="product-card group relative overflow-hidden aspect-square md:aspect-[3/4] cursor-pointer">
                     <img src="images/product_roofing_1768524454390.png" alt="Roofus SSMR Metal Roofing System"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
@@ -284,7 +284,7 @@
                 </div>
 
                 <!-- Product 2: TBF/BLF Louvers -->
-                <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
+                <div class="product-card group relative overflow-hidden aspect-square md:aspect-[3/4] cursor-pointer">
                     <img src="images/product_louver_1768524438241.png" alt="Twist Blade Facade Louver System"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
@@ -302,7 +302,7 @@
                 </div>
 
                 <!-- Product 3: Water Wave -->
-                <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
+                <div class="product-card group relative overflow-hidden aspect-square md:aspect-[3/4] cursor-pointer">
                     <img src="images/product_wave_panel_1768524472005.png" alt="Water Wave 3D Metal Panel"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
@@ -320,7 +320,7 @@
                 </div>
 
                 <!-- Product 4: S-Cube -->
-                <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
+                <div class="product-card group relative overflow-hidden aspect-square md:aspect-[3/4] cursor-pointer">
                     <img src="images/product_scube_1768524503546.png" alt="S-Cube 3D Cladding Panel"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
@@ -338,7 +338,7 @@
                 </div>
 
                 <!-- Product 5: ACP 3D Panel -->
-                <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
+                <div class="product-card group relative overflow-hidden aspect-square md:aspect-[3/4] cursor-pointer">
                     <img src="images/product_acp3d_ai.png" alt="ACP & SCP 3D Composite Panel"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
@@ -357,7 +357,7 @@
                 </div>
 
                 <!-- Product 6: 3D Steel Form Work -->
-                <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
+                <div class="product-card group relative overflow-hidden aspect-square md:aspect-[3/4] cursor-pointer">
                     <img src="images/product_3dsteel_ai.png" alt="3D Steel Form Work"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
@@ -375,7 +375,7 @@
                 </div>
 
                 <!-- Product 7: Shade Panel -->
-                <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
+                <div class="product-card group relative overflow-hidden aspect-square md:aspect-[3/4] cursor-pointer">
                     <img src="images/product_shade.png" alt="Shade Panel Expanded Metal"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
@@ -393,7 +393,7 @@
                 </div>
 
                 <!-- Product 8: Metal Roof Panel -->
-                <div class="product-card group relative overflow-hidden aspect-[3/4] cursor-pointer">
+                <div class="product-card group relative overflow-hidden aspect-square md:aspect-[3/4] cursor-pointer">
                     <img src="images/projects_aviation.png" alt="Metal Roof Panel Systems"
                         class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110"
                         loading="lazy">
